Fix: seamless background, polish final animations, and layout alignment

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height:100%;
+  width: 200%;
+  height: 100%;
   background: url("../assets/background.png") repeat-x bottom;
   background-size: 100% auto;
   animation: bgScroll 60s linear infinite;
